<resources>
    <string name="app_name" translatable="false">Love or Not</string>
    <string name="sub_app_name" translatable="false">(Flower Fortune-Telling)</string>
    <string name="developer" translatable="false">SkyPotato</string>
    <string name="designer" translatable="false">GreenMemory</string>
    <string name="and" translatable="false">&amp;</string>

    <string name="preference_file_key" translatable="false">org.skypotato.love_or_not.PREFERENCE_FILE_KEY</string>

    <string name="setting_001" translatable="false">StartScreen</string>

    <string name="main_menu_001">Start</string>
    <string name="main_menu_002">Setting</string>
    <string name="main_menu_003">End</string>

    <string name="setting_title_001">Starting Screen</string>
    <string name="setting_title_002">Data Management</string>
    <string name="setting_radio_001">Selection List</string>
    <string name="setting_radio_002">Flower Selection</string>
    <string name="setting_button_001">Delete Stored Data</string>

    <string name="list_title_001">Import Last List</string>
    <string name="list_title_002">Selection List</string>
    <string name="list_button_001">Import List</string>
</resources>
