<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.skypotato.love_or_not.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_setting">

        <Button
            android:id="@+id/btBack"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8sp"
            android:background="@drawable/button_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24sp"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/setting_title_001"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgStartSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbStartSetting_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:text="@string/setting_radio_001"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbStartSetting_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:text="@string/setting_radio_002"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/setting_title_002"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_brown"
                android:text="@string/setting_button_001"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
