<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.skypotato.love_or_not.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:padding="20sp">

            <Button
                android:id="@+id/btStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_brown"
                android:text="@string/main_menu_001"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_brown"
                android:text="@string/main_menu_002"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_brown"
                android:text="@string/main_menu_003"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btHelp"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/helpicon" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
