<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.skypotato.love_or_not.SelectListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <Button
            android:id="@+id/btBack"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8sp"
            android:background="@drawable/button_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btBack"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/list_title_001"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_text_brown"
                android:text="@string/list_button_001"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/list_title_002"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btOK"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_gravity="right"
                android:layout_marginTop="8sp"
                android:background="@drawable/button_ok" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
